# astrometry.net

./: .gitignore  CMakeLists.txt  Makefile
.circleci/: config.yml
catalogs/: Makefile
config/: PERFORMANCE_性能优化.md  default.conv  default.param  default.sex  run_solve_field.sh
doc/: build.rst  readme.rst
gsl-an/: Makefile
libkd/: Makefile  Makefile.min
plot/: Makefile
qfits-an/: Makefile
sdss/: Makefile
solver/: Makefile
util/: Makefile  anfiles.mk  anutils.mk  cairo.mk  common.mk  gsl.mk  libkd.mk  makefile.anfiles  makefile.anutils  makefile.cfitsio  makefile.common  makefile.cross  makefile.gsl  makefile.jpeg.mk  makefile.netpbm  makefile.png.mk  makefile.wcslib  png.mk  qfits.mk  zlib.mk
util/simplexy/: dallpeaks.c
